# runback

./: .dockerignore  .eslintignore  .gitignore  .gitmodules  Bot.toml  CONTRIBUTING.md  Cargo.toml  EULA.md  EULA.txt  PLANNED_FEATURES.md  README.md  docker-compose.development.yml  nx.json  package-lock.json  package.json  release.toml
.circleci/: config.yml  workflows.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
common/: Cargo.toml
common/src/: auth.rs  config.rs  eventing.rs  lib.rs
common/src/events/: mod.rs
common/src/services/: mod.rs
crates/common/src/: auth.rs  logging.rs
crates/discord-bot/: .gitignore  Cargo.toml  Dockerfile
crates/discord-bot/entity/: Cargo.toml
crates/discord-bot/entity/src/: lib.rs
crates/discord-bot/migration/src/: m20220101_000001_create_table.rs  main.rs
crates/discord-bot/src/: client.rs  config.rs  main.rs
crates/discord-bot/src/interactions/application_commands/: eula.rs  utils.rs
crates/discord-bot/src/interactions/application_commands/admin/: admin_handler.rs  mm_panels_handler.rs  mm_settings_handler.rs  mod.rs
crates/matchmaking-service/src/: main.rs
discord-bot/: .gitignore  .releaserc.yaml  Bot.example.toml  Bot.toml  Cargo.toml  Dockerfile  README.md  development.Dockerfile  docker-compose.development.yml  docker-compose.yml  package-lock.json  package.json
discord-bot/.circleci/: config.yml
discord-bot/entity/: Cargo.toml
discord-bot/entity/src/: discord_user.rs  lib.rs  matchmaking.rs
discord-bot/migration/: Cargo.toml
discord-bot/migration/src/: m20220101_000001_create_table.rs
discord-bot/scripts/: build_docker.sh  init.sql
discord-bot/src/: client.rs  config.rs  db.rs  error.rs  eventing.rs  lib.rs  main.rs
discord-bot/src/entities/: discord_user.rs  matchmaking.rs  mod.rs
discord-bot/src/entity/: game.rs  game_character.rs  matchmaking_invitation.rs  matchmaking_lobbies.rs  matchmaking_player_invitation.rs  matchmaking_player_lobby.rs  matchmaking_settings.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  state.rs  users.rs
discord-bot/src/events/: mod.rs
discord-bot/src/interactions/: mod.rs
discord-bot/src/interactions/application_commands/: admin.rs  eula.rs  lfg.rs  matchmaking.rs  mod.rs  utils.rs
discord-bot/src/interactions/application_commands/admin/: admin_handler.rs  mm_panels_handler.rs  mm_settings_handler.rs  mod.rs  panel_model.rs
discord-bot/src/interactions/application_commands/matchmaking/: lobby.rs  mod.rs
discord-bot/src/interactions/panels/: admin_lobby.rs  lobby.rs  matchmaking.rs  mm_panel.rs  mod.rs
discord-bot/src/migration/: m20221004_222202_create_tables.rs  m20221111_215309_remove_invitation_junction.rs  m20230709_220559_add_eventing.rs  main.rs  mod.rs
discord-bot/src/migration/deprecated/: matchmaking_player_invitation.rs  mod.rs
discord-bot/src/migration/res/: event-init.sql  snapshot-init.sql
discord-bot/src/queries/: lobby.rs  mod.rs
discord-bot/src/services/: mod.rs
matchmaking-service/: .gitignore  Cargo.toml  Config.toml  development.Dockerfile
matchmaking-service/src/: config.rs  main.rs
matchmaking-service/src/events/: mod.rs
services/ui/: .eslintrc.cjs  README.md  package.json  project.json
services/ui/src/: app.html
services/ui/src/routes/: +page.svelte
website-backend/: Cargo.toml
website-frontend/: Cargo.toml
