[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
reqwest = "~0.11"
openidconnect = "2.2.0"
serde = "~1.0"
serde_json = "~1.0"
tracing = "~0.1"
tracing-subscriber = { version = "*", features = ["json"] }
tracing-log = "*"
dashmap = "~5.3"
anyhow = "~1.0"
async-trait = "~0.1"
futures = "~0.3"
tokio = { version = "~1.19", features = ["full"] }
kafka = "0.9.0"
uuid = "~1.1"
thiserror = "1.0.31"
