[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.12"
serde = "~1.0"
tracing = "~0.1"
tracing-subscriber = { version = "^0.3", features = ["json"] }
dashmap = "^5"
anyhow = "~1.0"
async-trait = "~0.1"
