[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "discord-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Shared entities and objects.
[lib]
name = "bot"
path = "src/lib.rs"

[[bin]]
name = "migrator"
path = "src/migration/main.rs"
required-features = ["migrator"]

[features]
migrator = ["sea-orm-migration"]
default = ["migrator"]

[dependencies.sea-orm-migration]
version = "0.10.6"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
optional = true

[dependencies]
sea-orm = { version = "0.10.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
], default-features = false }
# Core
common = { path = "../common" }
anyhow = "1.0.69"
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0.152"
serde_json = "1.0.91"
dashmap = "5.3.4"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
tokio = { version = "^1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "tracing",
] }
futures = "0.3.25"
async-trait = "0.1.61"
tracing = "0.1.29"
tracing-subscriber = { version = "*", features = ["json"] }
# Twilight.rs
twilight-cache-inmemory = "0.14.1"
twilight-gateway = "0.14.0"
twilight-http = "0.14.1"
twilight-model = "0.14.0"
twilight-standby = "0.14.0"
twilight-mention = "0.14.0"
twilight-validate = "0.14.0"
twilight-util = { version = "0.14.1", features = ["full"] }
