[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "discord-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
migrator = ["sea-orm-migration"]
default = ["migrator"]

[dependencies.sea-orm-migration]
version = "0.10.6"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
optional = true

[dependencies]
sea-orm = { version = "0.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
], default-features = false }
# Core
common = { path = "../common" }
anyhow = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0"
serde_json = "1.0"
dashmap = "5.3"
parking_lot = "0.12"
lazy_static = "1.4"
chrono = "0.4"
tokio = { version = "^1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "tracing",
] }
futures = "0.3.25"
async-trait = "0.1.61"
tracing = "0.1.29"
tracing-subscriber = { version = "*", features = ["json"] }
# Twilight.rs
twilight-cache-inmemory = "0.14.1"
twilight-gateway = "0.14.0"
twilight-http = "0.14.1"
twilight-model = "0.14.0"
twilight-standby = "0.14.0"
twilight-mention = "0.14.0"
twilight-validate = "0.14.0"
twilight-util = { version = "0.14.1", features = ["full"] }

cqrs-es = "0.4"
postgres-es = "0.4"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
] }
