[package]
name = "matchmaking-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sea-orm = { version = "*", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
reqwest = "0.11.10"
openidconnect = "2.2.0"
common = { path = "../common" }
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0.133"
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-subscriber = { version = "*", features = ["json"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }