[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.6.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "sqlx-chrono" ], default-features = false }
chrono = "0.4.19"
twilight-model = "0.10.1"
serde = "1.0.133"
tracing = "0.1.29"