[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
sea-orm-migration = { version = "0.8.3", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
async-trait = "0.1.56"
entity = { path = "../entity" }
chrono = "0.4.19"